Implemented FB Realtime Database, User's list according to DB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="password_field_txt">Enter Password</string>
     <string name="sign_up_btn_txt">Sign Up</string>
     <string name="log_in_btn_txt">Log In</string>
+    <string name="log_out">Log Out</string>
 
 </resources>
